# vulkan_test

./: CMakeLists.txt
apps/: CMakeLists.txt  main.cpp
vulkan/: CMakeLists.txt
vulkan/include/: application.h  renderer.h  triangle.h
vulkan/shaders/: shader.vert
vulkan/src/: application.cpp  renderer.cpp  triangle.cpp
vulkan/src/shaders/: shader.vert  triangle.frag
